# edge-mental-health-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: domain_corpus.jsonl  sft.jsonl
docs/: QUICKSTART.md
examples/: agent_demo.py
mobile/react-native-shell/: package.json
prompts/: safety_policies.md  system_therapist.md
scripts/: build_android_q4f16.sh  export_hf.sh  prepare_data.sh  train_pt.sh  train_sft.sh
src/: __init__.py
src/agent/: __init__.py  prompts.py  runtime.py
src/cf_sft/: __init__.py  augment.py
src/data/: __init__.py  sensor_encoder.py
src/eval/: __init__.py  run_evaluation.py  safety_eval.py
src/quant/: __init__.py  build_mlc.py  export_hf.py
src/training/: __init__.py  continue_pretrain.py  eval_metrics.py  sft.py
src/utils/: __init__.py  config.py  logging_setup.py
tests/: test_basic.py  test_config.py  test_safety.py  test_sensor_encoder.py
